--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,5 +16,14 @@ Layout/LineLength:
 Bundler/OrderedGems:
   Enabled: false
 
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
 Metrics/ParameterLists:
   Enabled: false
