Add some Minitest specs.
And improve the Minitest spec directory in general. Switch
to specs rather than the test format.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,9 @@ Bundler/OrderedGems:
 Metrics/AbcSize:
   Enabled: false
 
+Metrics/BlockLength:
+  Enabled: false
+
 Metrics/CyclomaticComplexity:
   Enabled: false
 
