Refactor add_statement to accept DataValueTypes.
This makes it a lot easier for users to create new statements without
needing to know a ton about the format of the JSON blobs that Wikibase
wants you to send.

```rb
client.add_statement(
  id: 'Q124',
  statement: {
    mainsnak: {
      snaktype: "value",
      property: "P123",
      datatype: "string",
      datavalue: {
        type: "string",
        value: "Foo"
      }
    }
  }
)

client.add_statement(
  id: 'Q124',
  property: 'P123',
  datavalue: DataValueType::String.new(string: 'Foo')
)
```

Much simpler! :D

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,9 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Enabled: false
 
+Metrics/ClassLength:
+  Enabled: false
+
 Metrics/CyclomaticComplexity:
   Enabled: false
 
@@ -33,4 +36,7 @@ Metrics/MethodLength:
   Enabled: false
 
 Metrics/ParameterLists:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
   Enabled: false
